@@ -392,7 +392,8 @@ $filelist->clipBoard = $this->pObj->MOD_SETTINGS['clipBoard'];
 			$actionCall->setEnv('pathInfo', $this->pObj->pathInfo);
 			$actionCall->initActions();
 			$actions = $actionCall->renderActionsHorizontal();
-			$this->pObj->markers['UPLOAD'] = $actions[0];
+			$this->pObj->markers['FOLDER'] = $actions[0];
+			$this->pObj->markers['UPLOAD'] = '<a href="#" onclick="jumpToUrl(\'index.php?&amp;id=1&amp;SET[function]=tx_dam_file_upload\',this); return false;"><img' . t3lib_iconWorks::skinImg($this->pObj->doc->backPath, 'gfx/upload.gif') . ' title="'.$GLOBALS['LANG']->sL('LLL:EXT:dam/modfunc_file_upload/locallang.xml:tx_dam_file_upload.title',1).'" alt="" height="16" width="16"></a>';
 			$this->pObj->markers['NEW'] = $actions[1];
 		}
 		return $content;
